# aidoku-nhentai-cn

./: README.md  index.html  index.json  index.min.json  main.js  styles.css
.github/workflows/: build.yaml
sources/: multi.nhentai-v16.aix
sources/multi.nhentai/: Cargo.toml
sources/multi.nhentai/res/: settings.json  source.json
sources/multi.nhentai/scripts/: fetch_localization_cn.py  update_tags.py
sources/multi.nhentai/src/: home.rs  lib.rs  localization_cn.rs  models.rs  settings.rs  tags.rs
