[package]
name = "nhentai"
version = "0.1.0"
edition = "2024"

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", version = "0.3.0", features = ["json"] }
serde = { version = "1.0.188", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.105", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.30", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.14", features = ["serde"] }
phf = { version = "0.11", default-features = false, features = ["macros"] }

[dev-dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", features = ["test"] }
aidoku-test = { git = "https://github.com/Aidoku/aidoku-rs.git" }

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true
